[package]
name = "plasm"
version = "0.1.0"
authors = ["Francesco Magliocca <franciman12@gmail.com>",
            "Francesco Pham <pham.francesco@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = { git = "https://github.com/frankplus/three-d" }
log = "0.4"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "0.1"
honestintervals = { git = "https://github.com/frankplus/rust-honestintervals", features=["no-mpfr"] }